fix: solve z-index issue with content-visibility

--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -1,4 +1,5 @@
 .article {
+  position: relative;
   width: 100%;
   max-width: 60ch;
   margin: 0 auto;
@@ -6,5 +7,6 @@
   font-size: 20px;
   line-height: 1.8;
 
-  content-visibility: auto;
+  // z-index: 0;
+  // isolation: isolate;
 }
